--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -42,7 +42,7 @@
     width: 188px;
 }
 
-input{
+.Calculator input{
     width: 380px;
     height: 90px;
     background-color: rgb(238, 251, 205);
@@ -77,7 +77,7 @@ input{
     border-style: none;
     border-width:1px;
     padding: 10px;
-    /*background-color:rgb(178, 178, 178);*/
+    float:left;
     background-image: -webkit-linear-gradient(#BBBBBB,#BCBCBC,#B1B1B1);
     
 }
