--- a/visual.css
+++ b/visual.css
@@ -20,3 +20,11 @@
     fill:white;
     font:10px sans-serif;
 }
+
+.chart line{
+    stroke: #ccc;
+}
+
+.chart .y-scale-label{
+    fill: #bbb;
+}
