--- a/knapsack/knapsack.css
+++ b/knapsack/knapsack.css
@@ -1,6 +1,20 @@
 body{
     background-color: #ffcc66;
     font: 12px verdana;
+    color: #cc7711;
+}
+
+a:link {
+    color: #4e88aa;
+    text-decoration:none;
+}
+a:visited {
+    color: #4e88aa;
+    text-decoration:none;
+}
+a:hover {
+    color: #ffee77;
+    text-decoration:none;
 }
 
 div.main{
@@ -21,6 +35,7 @@ div.info{
     padding:10px;
     padding-left:20px;
     padding-right:20px;
+    color: #4e88aa;
 }
 
 div.data{
@@ -32,6 +47,7 @@ div.data{
     padding:10px;
     padding-left:20px;
     padding-right:20px;
+    color: #4e88aa;
 }
 
 div.gui{
@@ -47,9 +63,24 @@ div.foodbox{
     border-radius:40px;
     background-color: #5f99bb;
     width:450px;
-    height:400px;
+    height:380px;
+    padding-top:20px;
 }
 
-canvas.sack{
-    position:absolute;
+div.person{
+    width:200px;
+    height:400px;
+    margin-left:500px;
+}
+
+.knapsack td{
+    width:125px;
+    padding:10px;
+    padding-bottom:20px;
+}
+
+div.item{
+    text-align:center;
+    font: 11px verdana;
+    color: #aaddff;
 }
